--- a/diabities.ipynb
+++ b/diabities.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Data collesction and analysis\n",
-    "diabeties_data=pd.read_csv(\"C:\\\\Users\\\\angad\\\\Downloads\\\\diabetes.csv\")"
+    "diabeties_data=pd.read_csv(\"diabetes.csv\")"
    ]
   },
   {
